# vz-assignment

./: .gitignore  README.md
notebooks/: 1-ljv-VodafoneZiggo-exploration.ipynb  pyproject.toml  requirements.txt
notebooks/.ipynb_checkpoints/: 1-ljv-VodafoneZiggo-exploration-checkpoint.ipynb
notebooks/conf/: VZ assignment-695a8d6ecb7a.json  client_secret_718593840256-l3tnvboe9bsp00ar26q44j9tat1sruiu.apps.googleusercontent.com.json
reports/: report_users.html
reports/Other reports/: report_posts.html
