[tool.poetry]
name = "vodafoneziggo"
version = "0.1.0"
description = ""
authors = ["Leonardo Vida <lleonardovida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
google-api-python-client = "^1.8.2"
pandas-gbq = "^0.13.1"
ipykernel = "^5.2.1"
matplotlib = "^3.2.1"
google-cloud-bigquery = "^1.24.0"
pandoc = "^1.0.2"
nbconvert = "^5.6.1"
google-auth-oauthlib = "^0.4.1"
jupyter_contrib_nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
yapf = "^0.30.0"
cookiecutter = "^1.7.2"
tqdm = "^4.46.0"
seaborn = "^0.10.1"
pandas_profiling = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
